[package]
name = "parser-eval"
version = "0.1.0"
authors = ["Ruediger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
combine = "3.5.2"
pom = "3.1.0"
nom = "5.1.2"
pest_derive = "2.1.0"
anyhow = "1.0.32"
